force-app/main/default/objects/UsageBillingPeriodItem/fields/AssetId__c.field-meta.xml
<CustomField>
    <fullName>AssetId__c</fullName>
    <label>AssetId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>