force-app/main/default/objects/UsageBillingPeriodItem/fields/AssetIdName__c.field-meta.xml
<CustomField>
    <fullName>AssetIdName__c</fullName>
    <label>AssetIdName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>