force-app/main/default/objects/UsageBillingPeriodItem/fields/GrantBindingTargetId__c.field-meta.xml
<CustomField>
    <fullName>GrantBindingTargetId__c</fullName>
    <label>GrantBindingTargetId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>