force-app/main/default/objects/UsageBillingPeriodItem/fields/GrantBindingTargetIdName__c.field-meta.xml
<CustomField>
    <fullName>GrantBindingTargetIdName__c</fullName>
    <label>GrantBindingTargetIdName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>