force-app/main/default/objects/UsageBillingPeriodItem/fields/UEBId__c.field-meta.xml
<CustomField>
    <fullName>UEBId__c</fullName>
    <label>UEBId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>