force-app/main/default/objects/UsageBillingPeriodItem/fields/UEBIdName__c.field-meta.xml
<CustomField>
    <fullName>UEBIdName__c</fullName>
    <label>UEBIdName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>