force-app/main/default/objects/UsageBillingPeriodItem/fields/UoMId__c.field-meta.xml
<CustomField>
    <fullName>UoMId__c</fullName>
    <label>UoMId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>